finished required functions, improved pylint results

--- a/churn_notebook.ipynb
+++ b/churn_notebook.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {
     "editable": true
    },
@@ -646,6 +646,7 @@
    ],
    "source": [
     "plt.figure(figsize=(20,10)) \n",
+    "df['Churn'].astype(bool, copy=False)\n",
     "df['Churn'].hist();"
    ]
   },
